--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "json-server": "^0.17.4",
+    "moment": "^2.29.4",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
