--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "start-server": "json-server --watch db.json --port 3004",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npx prettier . --write"
   },
   "eslintConfig": {
     "extends": [
