--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx prettier . --write"
+    "prettier": "npx prettier . --write"
   },
   "eslintConfig": {
     "extends": [
